@@ -1,4 +1,6 @@
 Version 1.0.0:
+- lock_file(): If another process holds a lock on the file, then wait 1/100 
+  second instead of 1 second before the next try.
 - Gnulib update. Added nanosleep module.
 - Improve error handling for file locking: differentiate between timeouts and
   other errors.
